# utility-macros

./: .gitignore  Cargo.toml  LICENSE  README.md
_derive/: Cargo.toml
_derive/src/: lib.rs
_proc_macros/: Cargo.toml
_proc_macros/src/: lib.rs
_um/: Cargo.toml
_um/src/: case.rs  container_attributes.rs  error.rs  expect_token.rs  field_attributes.rs  lib.rs  option.rs  partial.rs  pick.rs  readonly.rs  record.rs  required.rs  string_union.rs
_um/src/attributes/: container_attributes.rs  container_attributes_with_keys.rs  field_variant_attributes.rs  mod.rs
_um/src/derive/: container_attributes.rs  mod.rs  partial.rs  pick.rs  readonly.rs  record.rs  required.rs
_um/src/derive_utils/: field_attributes.rs
_um/src/partial/: mod.rs  partial_impl.rs
_um/src/pick/: mod.rs  pick_impl.rs
_um/src/pick/pick_impl/: impl_enum.rs  mod.rs  pick_impl_enum.rs  pick_impl_struct_fields_named.rs
_um/src/readonly/: mod.rs  readonly_impl.rs
_um/src/record/: mod.rs
_um/src/required/: mod.rs  required_impl.rs
_um/src/union/: mod.rs  static_str_union.rs  union.rs  union_impl.rs
_um/src/utils/: case_ext.rs  literal_ext.rs  mod.rs  result_ext.rs  type_ext.rs
_um/tests/: case_ext_tests.rs  container_attrs_tests.rs  literal_ext_tests.rs  result_ext_tests.rs  test_case.rs  test_option.rs  test_union_impl.rs  type_ext_tests.rs
_utility_macros/: Cargo.toml
_utility_macros/src/: error.rs  lib.rs  partial.rs
examples/: partial.rs  pick_enum.rs  pick_struct.rs  readonly.rs  record.rs  required.rs  static_str_union.rs  string_union.rs  union.rs
src/: lib.rs
