[package]
name = "utility-macros"
version = "0.0.1"
edition = "2021"
description = "Rust Library to with proc macros to emulate Utility Types in TypeScript"
readme = "README.md"
license = "MIT"
repository = "https://github.com/hbersey/utility-macros"

[dependencies]
_um = { path = "_um", version = "0.0.1", package = "utility-macros-internals" }
_derive = { path = "_derive", version = "0.0.1", package = "utility-macros-derive" }
