[package]
name = "utility-macros"
version = "0.0.3"
edition = "2021"
description = "A Rust library to emulate Utility Types in TypeScript"
readme = "README.md"
license = "MIT"
repository = "https://github.com/hbersey/utility-macros"

[dependencies]
_um = { path = "_um", version = "0.0.2", package = "utility-macros-internals" }
_derive = { path = "_derive", version = "0.0.3", package = "utility-macros-derive" }
