[package]
name = "utility-macros-derive"
version = "0.0.3"
edition = "2021"
description = "derive macros for utility-macros"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/hbersey/utility-macros"


[dependencies]
_um = { path = "../_um", version = "0.0.1", package = "utility-macros-internals" }
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.6"

[lib]
proc-macro = true
