[package]
name = "utility-macros-derive"
version = "0.0.4"
edition = "2021"
description = "derive macros for utility-macros"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/hbersey/utility-macros"


[dependencies]
_um = { path = "../_um", version = "0.0.4", package = "utility-macros-internals" }
syn = "2.0"

[lib]
proc-macro = true
