[package]
name = "utility-macros-internals"
version = "0.0.1"
edition = "2021"
description = "utility-macros and utiliy-macros-derive common code"
readme = "README.md"
license = "MIT"
repository = "https://github.com/hbersey/utility-macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
static_assertions = "1.1"
